<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="Camera_Set_Bool" Id="{bf8a1094-fd99-4174-a00c-8e948d92e357}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Camera_Set_Bool : Buffer_Error
VAR_INPUT
	Camera : REFERENCE TO Cognex_Camera;
	Num : USINT;
	In : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Camera_Set_Bool := Set_Bool_Fom_Buffer(	In:= In, 
										Num:= Num, 
										Layout:= Camera.Ouput_Buffer_Layout, 
										Buffer:= Camera.User_Data.UserData)]]></ST>
    </Implementation>
    <LineIds Name="Camera_Set_Bool">
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>